hyc-examples/tests/variables/valid/definition.hyc
SOME_GLOBAL_FLAG: bool = false;
