hyc-examples/tests/variables/invalid/missing-modifier-def.hyc
some_bool bool = false;
